fix(dashboard): graph ui fixes
* Fix cropped text in task graph node
* Change Task Graph to Stack Graph in Sidebar

--- a/dashboard/src/components/graph/graph.scss
+++ b/dashboard/src/components/graph/graph.scss
@@ -39,7 +39,8 @@
     text-align: center;
 
     span.name {
-      font-weight: bold;
+      font-weight: 700;
+      font-size: 0.9rem;
     }
     span.type {
       display: inline-block;
